# 2022_2_Teiko

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
.github/workflows/: main.yml
Client/: Client.pro  client_worker.cpp  client_worker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  metrics.cpp  metrics.h  news.cpp  news.h  shop_buttons.cpp
Its_finance/: CMakeLists.txt  main.cpp  mainwindow.ui
build-Client-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt  Client  Makefile  build.ninja  cmake_install.cmake  moc_client_worker.cpp  moc_mainwindow.cpp  qtcsettings.cmake  ui_mainwindow.h
build-Client-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-d59e586ab8b721c96d1f.json  cmakeFiles-v1-447bb38f534e7eba02c3.json  codemodel-v2-a329306d95c8a3257099.json  index-2022-12-26T14-12-52-0036.json  target-Client-Debug-9cd451ad79065fe24544.json  target-Client_autogen-Debug-f3ce2251ff15176a6bb2.json  target-Client_autogen_timestamp_deps-Debug-0eab5423984a6d1238ee.json
build-Client-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Client-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QAction.56B0231F73028F3E.idx  (+162 more)
build-server-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  moc_general_server.cpp  moc_mainwindow.cpp  moc_server_manager.cpp  server  ui_mainwindow.h
build-server-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
include/: client.h  connect.h  data.h  db.h  dbms.h  hello.h  server.h  state.h  userInfo.h
modules/: main.h
server/: general_server.cpp  general_server.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  news.cpp  news.h  server.pro  server_manager.cpp  server_manager.h
src/: Family.cpp  Family.h  Move.cpp  Move.h  Player.cpp  Player.h  Store.cpp  Store.h  client.cpp  connect.cpp  hello.cpp  server.cpp
tests/: CMakeLists.txt  test.cpp
untitled/: CMakeLists.txt  interface.h  interface.ui  main.cpp
(+102 files in other folders)
